[workspace]
resolver = "2"
members = [
    "crates/nebula-core",
    "crates/nebula-server",
    "crates/nebula-engine",
    "crates/nebula-plugin-sdk",
]
exclude = [
    "nebula-node/rust",
    "nebula-admin/rust",
    "plugins/built-in/comm-link",
    "plugins/built-in/observer",
    "plugins/built-in/device-info",
    "plugins/built-in/file-access",
    "plugins/built-in/accessibility",
    "plugins/built-in/action-mirror",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1"
anyhow = "1.0"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[profile.dev]
panic = "abort"
