[package]
name = "nebula-core"
edition.workspace = true
version.workspace = true
description = "Shared protocol types, security primitives, and identity for NEBULA"

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

# Crypto
aes-gcm = "0.10"
hmac = "0.12"
hkdf = "0.12"
