[package]
name = "nebula-plugin-whatsapp"
version = "0.1.0"
edition = "2021"
authors = ["HexiCore <hexicore.dev@gmail.com>"]
description = "WhatsApp Web multi-device client plugin for NEBULA"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nebula-plugin-sdk = { path = "../../../crates/nebula-plugin-sdk" }
whatsapp-client = { path = "crates" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
