[package]
name = "whatsapp-rust-ureq-http-client"
version = "0.2.0"
edition = "2024"
authors = ["HexiCore <hexicore.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/HexiCore-dev/Nebula"
description = "Ureq-based HTTP client implementation for nebula-whatsapp"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
ureq = { version = "3.1.4", default-features = false, features = [
    "rustls",
    "json",
] }
wacore = { workspace = true }
