[package]
name = "whatsapp-rust-sqlite-storage"
version = "0.2.0"
edition = "2024"
authors = ["HexiCore <hexicore.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/HexiCore-dev/Nebula"
description = "SQLite storage backend for nebula-whatsapp"

[dependencies]
async-trait = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
diesel = { version = "2.3.5", default-features = false, features = [
    "sqlite",
    "r2d2",
    "32-column-tables",
] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
diesel_migrations = { version = "2.3.1", default-features = false, features = [
    "sqlite",
] }
log = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
wacore = { workspace = true }
wacore-binary = { workspace = true }
waproto = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
