[package]
name = "wacore-binary"
version = "0.2.0"
edition = "2024"
authors = ["HexiCore <hexicore.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/HexiCore-dev/Nebula"
description = "Binary data and constants for WhatsApp protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
flate2 = { workspace = true }
phf = { version = "0.13.1", default-features = false }
serde = { workspace = true, optional = true }

[build-dependencies]
phf_codegen = "0.13.1"
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
iai-callgrind = { workspace = true }

[[bench]]
name = "binary_benchmark"
harness = false
