[package]
name = "wacore-derive"
version = "0.2.0"
edition = "2024"
authors = ["HexiCore <hexicore.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/HexiCore-dev/Nebula"
description = "Derive macros for wacore protocol types"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
