[package]
name = "wacore-libsignal"
version = "0.2.0"
edition = "2024"
authors = ["HexiCore <hexicore.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/HexiCore-dev/Nebula"
description = "Signal Protocol implementation for the WhatsApp platform"

[dependencies]
aes = { workspace = true }
aes-gcm = { workspace = true }
arrayref = "0.3.9"
async-trait = { workspace = true }
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = { workspace = true, features = ["now", "serde"] }
ctr = { workspace = true }
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
derive_more = { version = "2.1.0", features = ["from", "into", "try_from"] }
displaydoc = "0.2.5"
ghash = "0.5.1"
hex = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
log = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
sha1 = { version = "0.10.6", default-features = false }
sha2 = { workspace = true }
subtle = "2.6.1"
thiserror = { workspace = true }
uuid = { version = "1.18.1", default-features = false }
waproto = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }
iai-callgrind = { workspace = true }

[[bench]]
name = "libsignal_benchmark"
harness = false
